--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     }
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
+    "chart.js": "^2.9.3",
     "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
